tests/paczka1/fuzzy1/38832897.err
Error in line 2: Vca S68 28,5
Error in line 3: O5aySi8jG S540 12,4
Error in line 14: OgR6 A654 62,4
Error in line 23: OgR6 S68 58,4
Error in line 21: Vca A562 81,0
Error in line 24: OgR6 S540 57,1
Error in line 25: Vca S68 10,6
Error in line 32: O5aySi8jG A562 45,7
